<resources>
    <string name="app_name">Music App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="player">Player</string>
    <string name="create_playlist">Create new playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="track_count">Track count</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel\n</string>
    <string name="time_created">Time created</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="import_artist">Import artist</string>
    <string name="text_artist">Artist</string>
    <string name="songs">Songs</string>
    <string name="song_name">Song name</string>
    <string name="all_songs">All Songs</string>
    <string name="label_start_time">00:00</string>
    <string name="clear_list">Clear list</string>
    <string name="playing">Playing</string>
    <string name="add_song">Add song</string>
    <string name="click_to_item_to_add_to_playlist">Click to add</string>
    <string name="play_all">Play all</string>
    <string name="hold_item_notice">* Hold the item to modify</string>
</resources>